[package]
name = "spaceshuttle"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.15.0"
actix-web = "4.3.1"
shuttle-actix-web = "0.15.0"
tokio = "1.28.0"
shuttle-shared-db = { version = "0.15.0", features = ["postgres"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls"] }
serde = "1.0.160"
rand = "0.8.5"
